Ensures long event titles in Firefox wrap properly. Note: selecting/editing event titles in firefox is still broken. Not sure how to fix that at the moment.

--- a/app/assets/stylesheets/schedule.scss
+++ b/app/assets/stylesheets/schedule.scss
@@ -176,6 +176,7 @@
 		margin-right: auto;
 		text-align:left;
 		overflow: hidden;
+        overflow-wrap: break-word; /* chrome does this by default - firefox doesn't */
 		transition: all 0.3s;
 		cursor: pointer;
 		max-height: 95%;
